# dtos-analyse-data-science

./: .gitignore  .tool-versions  README.md
.github/workflows/: stage-1-commit.yaml
projects/scrape_ONS/: Dockerfile  README.md  get_metadata.py  pyproject.toml  run_census.py  test_fast_observations.py  test_ons_client.py
projects/scrape_ONS/ons_client/: __init__.py  cli.py  download_filtered_csv.py  fast_census_data.py  filter_processor.py  models.py  ons_client.py  utils.py
projects/scrape_ONS/ons_client/api/: __init__.py  client.py  filter_client.py
projects/scrape_ONS/ons_client/models/: filter_models.py  rm_models.py  ts_models.py
projects/scrape_ONS/ons_client/processors/: __init__.py
projects/scrape_ONS/ons_data/: cli.py
projects/scrape_ONS/ons_data/api/: __init__.py  client.py  filter_client.py  rm_client.py  ts_client.py
projects/scrape_ONS/ons_data/models/: common.py  ts_models.py
projects/scrape_ONS/ons_data/processors/: __init__.py  base.py  rm_processor.py  ts_processor.py
projects/scrape_ONS/tests/: __init__.py  conftest.py  pytest.ini
projects/scrape_ONS/tests/cli/: __init__.py  test_cli.py
projects/scrape_ONS/tests/e2e/: __init__.py  test_e2e.py
projects/scrape_ONS/tests/integration/: __init__.py  test_integration.py
projects/scrape_ONS/tests/unit/: __init__.py  test_run_census.py
projects/synthetic_bsselect_data/: README.md  pyproject.toml
projects/synthetic_bsselect_data/data_generation/: generate.ipynb
projects/synthetic_bsselect_data/metric_calculations/: calculate_metrics.py  enrich_tables.py  metric_test.ipynb
(+31 files in other folders)
