[tool.poetry]
name = "synthetic-bsselect-data"
version = "0.1.0"
description = "Synthetic data generation for bs-select"
authors = ["samw-nhs <sam.walsh6@nhs.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "data_generation"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0"
numpy = "^1.24"
matplotlib = "^3.7"
scikit-learn = "^1.3"
notebook = "^7.0"
ipykernel = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
